--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                     <a class="nav-link" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Sobre Mim</a>
+                    <a class="nav-link" href="#main">Sobre Mim</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Corrículo</a>
+                    <a class="nav-link" href="#main1">Corrículo</a>
                 </li>
             </ul>
         </section>
