--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <div class="col-md-3 box">
                         <div class="asa1">
                             <div class="shadow-animate">
-                                <h4>Experiência</h4>
+                                <h4>Competências</h4>
                                 <p class="paragrafo-main2">Possuo algumas competências, dentre as quais:</p>
                                 <ul>
                                     <li>
